--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,47 +1,179 @@
-name: Deploy MuleSoft App to Anypoint CloudHub
-
+# This workflow will build a MuleSoft project and deploy to CloudHub
+ 
+name: Build and Deploy to Sandbox
+ 
 on:
+
   push:
-    branches:
-      - main
-    paths:
-      - 'cicd/**'
-      - 'pom.xml'
+
+    branches: [ main ]
+
+  workflow_dispatch:
 
 jobs:
-  deploy:
+
+  build:
+
     runs-on: ubuntu-latest
 
     env:
-      ANYPOINT_USERNAME: ${{ secrets.ANYPOINT_USERNAME }}
-      ANYPOINT_PASSWORD: ${{ secrets.ANYPOINT_PASSWORD }}
-      ANYPOINT_ENVIRONMENT: ${{ secrets.ANYPOINT_ENVIRONMENT }}
-      ANYPOINT_BUSINESS_GROUP: ${{ secrets.ANYPOINT_BUSINESS_GROUP }}
-      ANYPOINT_CLIENT_ID: ${{ secrets.ANYPOINT_CLIENT_ID }}
-      ANYPOINT_CLIENT_SECRET: ${{ secrets.ANYPOINT_CLIENT_SECRET }}
+
+      CA_CLIENT_ID: ${{ secrets.ANYPOINT_CLIENT_ID }}
+
+      CA_CLIENT_SECRET: ${{ secrets.ANYPOINT_CLIENT_SECRET }}
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
 
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '11'
+    - uses: actions/checkout@v3
 
-      - name: Set up Maven
-        uses: s4u/setup-maven-action@v1.12.0
-        with:
-          maven-version: '3.8.6'
+    - uses: actions/cache@v3
 
-      - name: Deploy to CloudHub
-        run: |
-          mvn clean deploy \
-            -DmuleDeploy \
-            -Danypoint.username=$ANYPOINT_USERNAME \
-            -Danypoint.password=$ANYPOINT_PASSWORD \
-            -Danypoint.env=$ANYPOINT_ENVIRONMENT \
-            -Danypoint.businessGroup=$ANYPOINT_BUSINESS_GROUP \
-            -Danypoint.clientId=$ANYPOINT_CLIENT_ID \
-            -Danypoint.clientSecret=$ANYPOINT_CLIENT_SECRET
+      with:
+
+        path: ~/.m2/repository
+
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+
+        restore-keys: |
+
+          ${{ runner.os }}-maven-
+
+    - name: Set up JDK 11
+
+      uses: actions/setup-java@v3
+
+      with:
+
+        java-version: 11
+
+        distribution: 'zulu'
+
+    - name: Print effective-settings (optional)
+
+      run: mvn help:effective-settings
+
+    - name: Build with Maven
+
+      run: mvn -B package -s .maven/settings.xml
+
+    - name: Stamp artifact file name with commit hash
+
+      run: |
+
+        artifactName1=$(ls target/*.jar | head -1)
+
+        commitHash=$(git rev-parse --short "$GITHUB_SHA")
+
+        artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
+
+        mv $artifactName1 $artifactName2
+
+    - name: Upload artifact 
+
+      uses: actions/upload-artifact@master
+
+      with:
+
+          name: artifacts
+
+          path: target/*.jar
+
+
+  upload:
+
+    needs: build
+
+    runs-on: ubuntu-latest
+
+    env:
+
+      CA_CLIENT_ID: ${{ secrets.ANYPOINT_CLIENT_ID }}
+
+      CA_CLIENT_SECRET: ${{ secrets.ANYPOINT_CLIENT_SECRET }}
+ 
+    steps:    
+
+    - uses: actions/checkout@v3
+
+    - uses: actions/cache@v3
+
+      with:
+
+        path: ~/.m2/repository
+
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+
+        restore-keys: |
+
+          ${{ runner.os }}-maven-
+
+    - uses: actions/download-artifact@master
+
+      with:
+
+        name: artifacts
+
+    - name: Upload to Exchange
+
+      run: |
+
+        artifactName=$(ls *.jar | head -1)
+
+        mvn deploy \
+
+         -s .maven/settings.xml \
+
+         -Dmule.artifact=$artifactName \
+
+
+
+  deploy:
+
+    needs: upload
+
+    runs-on: ubuntu-latest
+
+    env:
+
+      CA_CLIENT_ID: ${{ secrets.ANYPOINT_CLIENT_ID }}
+
+      CA_CLIENT_SECRET: ${{ secrets.CA_CLIENT_SECRET }}
+ 
+    steps:    
+
+    - uses: actions/checkout@v3
+
+    - uses: actions/cache@v3
+
+      with:
+
+        path: ~/.m2/repository
+
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+
+        restore-keys: |
+
+          ${{ runner.os }}-maven-
+
+    - uses: actions/download-artifact@master
+
+      with:
+
+        name: artifacts
+
+    - name: Deploy to Sandbox
+
+      run: |
+
+        artifactName=$(ls *.jar | head -1)
+
+        mvn deploy -DmuleDeploy \
+
+         -Dmule.artifact=$artifactName \
+
+         -s .maven/settings.xml \
+
+         -DskipTests \
+
+         -DskipDeploymentVerification="true"
+ 
