--- a/cicd/pom.xml
+++ b/cicd/pom.xml
@@ -29,6 +29,29 @@
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
+				<version>3.8.0</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.eclipse.aether</groupId>
+						<artifactId>aether-connector-basic</artifactId>
+						<version>1.1.0</version>
+					</dependency>
+					<dependency>
+						<groupId>org.eclipse.aether</groupId>
+						<artifactId>aether-transport-file</artifactId>
+						<version>1.1.0</version>
+					</dependency>
+					<dependency>
+						<groupId>org.eclipse.aether</groupId>
+						<artifactId>aether-transport-http</artifactId>
+						<version>1.1.0</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
+			<plugin>
+				<groupId>org.mule.tools.maven</groupId>
+				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
