--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,61 +1,173 @@
-# This workflow will build a MuleSoft project and is manually triggered for deployment.
-	
-	name: Manual workflow
-	
-	on:
-	  workflow_dispatch:
-	    branches: [main]
-	    inputs:
-	      name:
-	        description: 'prod deployment ?'
-	        default: 'yes'
-	        required: true
-	
-	jobs:
-	  build:
-	    runs-on: ubuntu-latest
-	    steps:
-	    - uses: actions/checkout@v2
-	    - uses: actions/cache@v1
-	      with:
-	        path: ~/.m2/repository
-	        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-	        restore-keys: |
-	          ${{ runner.os }}-maven-
-	    - name: Set up JDK 1.8
-	      uses: actions/setup-java@v1
-	      with:
-	        java-version: 1.8
-	    - name: Build
-	      run: mvn -B package --file pom.xml
-	    - name: Stamp artifact file name with commit hash
-	      run: |
-	        artifactName1=$(ls target/*.jar | head -1)
-	        commitHash=$(git rev-parse --short "$GITHUB_SHA")
-	        artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/.$commitHash.jar/g")
-	        mv $artifactName1 $artifactName2
-	    - uses: actions/upload-artifact@master
-	      with:
-	          name: artifacts
-	          path: target/*.jar
-	  deploy:
-	    needs: build
-	    runs-on: ubuntu-latest
-	    steps:    
-	    - uses: actions/checkout@v2
-	    - uses: actions/cache@v1
-	      with:
-	        path: ~/.m2/repository
-	        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-	        restore-keys: |
-	          ${{ runner.os }}-maven-
-	    - uses: actions/download-artifact@master
-	      with:
-	        name: artifacts
-	    - name: Deploy to CloudHub
-	      env:
-	        USERNAME: ${{ secrets.ANYPOINT_USERNAME }}
-	        PASSWORD: ${{ secrets.ANYPOINT_PASSWORD }}
-	      run: |
-	        artifactName=$(ls *.jar | head -1)
-	        mvn package deploy -DmuleDeploy -Danypoint.env=Sandbox -Danypoint.appName=githubactionsci-cdpipeline -Danypoint.username=${{ secrets.ANYPOINT_USERNAME }} -Danypoint.password=${{ secrets.ANYPOINT_PASSWORD }}  -Danypoint.muleVersion=4.3.0 -Danypoint.region=us-west-1 -Danypoint.workers=2
+# This workflow will build a MuleSoft project and deploy to CloudHub
+name: Build and Deploy to Sandbox
+on:
+ 
+  push:
+ 
+    branches: [ main ]
+ 
+  workflow_dispatch:
+ 
+jobs:
+ 
+  build:
+ 
+    runs-on: ubuntu-latest
+ 
+    env:
+ 
+      CA_CLIENT_ID: ${{ secrets.ANYPOINT_CLIENT_ID }}
+ 
+      CA_CLIENT_SECRET: ${{ secrets.ANYPOINT_CLIENT_SECRET }}
+ 
+    steps:
+ 
+    - uses: actions/checkout@v3
+ 
+    - uses: actions/cache@v3
+ 
+      with:
+ 
+        path: ~/.m2/repository
+ 
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+ 
+        restore-keys: |
+ 
+          ${{ runner.os }}-maven-
+ 
+    - name: Set up JDK 11
+ 
+      uses: actions/setup-java@v3
+ 
+      with:
+ 
+        java-version: 11
+ 
+        distribution: 'zulu'
+ 
+    - name: Print effective-settings (optional)
+ 
+      run: mvn help:effective-settings
+ 
+    - name: Build with Maven
+ 
+      run: mvn -B package -s .maven/settings.xml
+ 
+    - name: Stamp artifact file name with commit hash
+ 
+      run: |
+ 
+        artifactName1=$(ls target/*.jar | head -1)
+ 
+        commitHash=$(git rev-parse --short "$GITHUB_SHA")
+ 
+        artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
+ 
+        mv $artifactName1 $artifactName2
+ 
+    - name: Upload artifact
+ 
+      uses: actions/upload-artifact@master
+ 
+      with:
+ 
+          name: artifacts
+ 
+          path: target/*.jar
+ 
+ 
+  upload:
+ 
+    needs: build
+ 
+    runs-on: ubuntu-latest
+ 
+    env:
+ 
+      CA_CLIENT_ID: ${{ secrets.ANYPOINT_CLIENT_ID }}
+ 
+      CA_CLIENT_SECRET: ${{ secrets.ANYPOINT_CLIENT_SECRET }}
+    steps:    
+ 
+    - uses: actions/checkout@v3
+ 
+    - uses: actions/cache@v3
+ 
+      with:
+ 
+        path: ~/.m2/repository
+ 
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+ 
+        restore-keys: |
+ 
+          ${{ runner.os }}-maven-
+ 
+    - uses: actions/download-artifact@master
+ 
+      with:
+ 
+        name: artifacts
+ 
+    - name: Upload to Exchange
+ 
+      run: |
+ 
+        artifactName=$(ls *.jar | head -1)
+ 
+        mvn deploy \
+ 
+         -s .maven/settings.xml \
+ 
+         -Dmule.artifact=$artifactName \
+ 
+ 
+  deploy:
+ 
+    needs: upload
+ 
+    runs-on: ubuntu-latest
+ 
+    env:
+ 
+      CA_CLIENT_ID: ${{ secrets.ANYPOINT_CLIENT_ID }}
+ 
+      CA_CLIENT_SECRET: ${{ secrets.CA_CLIENT_SECRET }}
+    steps:    
+ 
+    - uses: actions/checkout@v3
+ 
+    - uses: actions/cache@v3
+ 
+      with:
+ 
+        path: ~/.m2/repository
+ 
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+ 
+        restore-keys: |
+ 
+          ${{ runner.os }}-maven-
+ 
+    - uses: actions/download-artifact@master
+ 
+      with:
+ 
+        name: artifacts
+ 
+    - name: Deploy to Sandbox
+ 
+      run: |
+ 
+        artifactName=$(ls *.jar | head -1)
+ 
+        mvn deploy -DmuleDeploy \
+ 
+         -Dmule.artifact=$artifactName \
+ 
+         -s .maven/settings.xml \
+ 
+         -DskipTests \
+ 
+         -DskipDeploymentVerification="true"
