--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -133,7 +133,7 @@ jobs:
  
       CA_CLIENT_ID: ${{ secrets.ANYPOINT_CLIENT_ID }}
  
-      CA_CLIENT_SECRET: ${{ secrets.CA_CLIENT_SECRET }}
+      CA_CLIENT_SECRET: ${{ secrets.ANYPOINT_CLIENT_SECRET }}
     steps:    
  
     - uses: actions/checkout@v3
