--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
  
     - name: Build with Maven
  
-      run: mvn -B package -s .maven/settings.xml
+      run: mvn -B package -s .maven/pom.xml
  
     - name: Stamp artifact file name with commit hash
  
