--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,13 +36,13 @@ jobs:
  
           ${{ runner.os }}-maven-
  
-    - name: Set up JDK 1.8
+    - name: Set up JDK 11
  
       uses: actions/setup-java@v1
  
       with:
  
-        java-version: 1.8
+        java-version: 11
  
     - name: Print effective-settings (optional)
  
@@ -50,7 +50,7 @@ jobs:
  
     - name: Build with Maven
  
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file main/hello-world/pom.xml
  
     - name: Stamp artifact file name with commit hash
  
