--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
  
     - name: Build with Maven
  
-      run: mvn -B package --file main/hello-world/pom.xml
+      run: mvn -B -f hello-world/pom.xml package
  
     - name: Stamp artifact file name with commit hash
  
