--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,13 +56,13 @@ jobs:
  
       run: |
  
-        artifactName1=$(ls target/*.jar | head -1)
+        artifactName1=$(ls hello-world/target/*.jar | head -1)
  
         commitHash=$(git rev-parse --short "$GITHUB_SHA")
  
-        artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
+        artifactName2=$(echo "$artifactName1" | sed "s/.jar/-$commitHash.jar/g")
  
-        mv $artifactName1 $artifactName2
+        mv "$artifactName1" "$artifactName2"
  
     - name: Upload artifact
  
