--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,13 +66,13 @@ jobs:
  
     - name: Upload artifact
  
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@v3
  
       with:
  
           name: artifacts
  
-          path: target/*.jar
+          path: hello-world/target/*.jar
  
  
   upload:
