--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
  
     - name: Upload artifact
  
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@master
  
       with:
  
