--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,9 +116,11 @@ jobs:
  
         mvn deploy \
  
-         -s .maven/settings.xml \
+         -f hello-world/pom.xml \
  
-         -Dmule.artifact=$artifactName \
+         -s hello-world/.maven/settings.xml \
+
+         -Dmule.artifact=$artifactName
  
  
   deploy:
