--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -161,6 +161,14 @@ jobs:
       run: |
  
         artifactName=$(ls *.jar | head -1)
+
+        echo "Artifact found: $artifactName"
+
+        ls -l
+
+        ls -l hello-world
+
+        cd hello-world
  
         mvn deploy -DmuleDeploy \
  
