--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,137 +1,64 @@
+# This workflow will build a MuleSoft project and deploy to CloudHub
 name: Build and Deploy to IMV Cloudhub
- 
 on:
-
-  push:
-
-    branches:
-
-      - main
- 
+  push :
+    branches: 'main'
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-
-      - name: Checkout code
-
-        uses: actions/checkout@v2
- 
-      - name: Cache Maven dependencies
-
-        uses: actions/cache@v3
-
-        with:
-
-          path: ~/.m2/repository
-
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-
-          restore-keys: |
-
-            ${{ runner.os }}-maven-
- 
-      - name: Set up JDK 11
-
-        uses: actions/setup-java@v1
-
-        with:
-
-          java-version: 11
- 
-      - name: Print Maven effective settings (optional)
-
-        run: mvn help:effective-settings
- 
-      - name: Build with Maven
-
-        run: mvn -B package --file hello-world-cicd/pom.xml
- 
-      - name: Stamp artifact file name with commit hash
-
-        run: |
-
-          artifact=$(ls hello-world-cicd/target/*.jar | head -1)
-
-          commitHash=$(git rev-parse --short "$GITHUB_SHA")
-
-          stamped="hello-world-cicd/target/hello-world-cicd-${commitHash}.jar"
-
-          mv "$artifact" "$stamped"
- 
-      - name: Upload artifact
-
-        uses: actions/upload-artifact@v4
-
-        with:
-
+    - uses: actions/checkout@v2
+    - uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Print effective-settings (optional)
+      run: mvn help:effective-settings
+    - name: Build with Maven
+      run: mvn -B package --file hello-world-cicd/pom.xml
+    - name: Stamp artifact file name with commit hash
+      run: |
+        artifactName1=$(ls hello-world-cicd/target/*.jar | head -1)
+        commitHash=$(git rev-parse --short "$GITHUB_SHA")
+        artifactName2=$(ls hello-world-cicd/target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
+        mv $artifactName1 $artifactName2
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
           name: artifacts
-
           path: hello-world-cicd/target/*.jar
- 
   deploy:
-
     needs: build
-
     runs-on: ubuntu-latest
-
-    steps:
-
-      - name: Checkout code
-
-        uses: actions/checkout@v2
- 
-      - name: Cache Maven dependencies
-
-        uses: actions/cache@v3
-
-        with:
-
-          path: ~/.m2/repository
-
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-
-          restore-keys: |
-
-            ${{ runner.os }}-maven-
- 
-      - name: Download artifact
-
-        uses: actions/download-artifact@v4
-
-        with:
-
-          name: artifacts
- 
-      - name: Deploy to CloudHub Sandbox
-
-        env:
-
-          USERNAME: ${{ secrets.ANYPOINT_USERNAME }}
-
-          PASSWORD: ${{ secrets.ANYPOINT_PASSWORD }}
-
-        run: |
-
-          echo "Current directory: $(pwd)"
-
-          ls -l
-
-          artifactName=$(ls *.jar | head -1)
-
-          echo "Deploying artifact: $artifactName"
-
-          mvn -X deploy -DmuleDeploy \
-
-            -Dmule.artifact="$artifactName" \
-
-            -Danypoint.username="$USERNAME" \
-
-            -Danypoint.password="$PASSWORD" \
-
-            -DskipTests
-
- 
+    steps:    
+    - uses: actions/checkout@v2
+    - uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - uses: actions/download-artifact@master
+      with:
+        name: artifacts
+    - name: Deploy to Sandbox
+      env:
+        USERNAME: ${{ secrets.ANYPOINT_USERNAME }}
+        PASSWORD: ${{ secrets.ANYPOINT_PASSWORD }}
+      run: |
+        cd hello-world-cicd
+        echo "Current directory: $(pwd)"
+        ls -l target/
+        artifactName=$(ls target/*.jar | head -1)
+        echo "Deploying artifact: $artifactName"
+        mvn -X deploy -DmuleDeploy \
+         -Dmule.artifact="$artifactName" \
+         -Danypoint.username="$USERNAME" \
+         -Danypoint.password="$PASSWORD" \
+         -DskipTests
