--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -54,6 +54,7 @@ jobs:
       run: |
         cd hello-world-cicd
         echo "Current directory: $(pwd)"
+        echo "Artifact found: $artifactName"
         ls -l hello-world-cicd/target/*.jar
         artifactName=$(ls hello-world-cicd/target/*.jar | head -1)
         echo "Deploying artifact: $artifactName"
