--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -60,7 +60,7 @@ jobs:
 
     - name: Upload artifact
 
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@master
 
       with:
 
