--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -112,7 +112,7 @@ jobs:
 
         ls -l target/
 
-        artifactName=$(ls target/*.jar | head -1)
+        artifactName=$(ls hello-world-cicd/target/*.jar | head -1)
 
         echo "Deploying artifact: $artifactName"
 
