--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -107,8 +107,10 @@ jobs:
       run: |
         cd hello-world-cicd
         
-        artifactName=$(ls *.jar | head -1)
+        mv artifacts/*.jar hello-world-cicd/target/
         
+        cd hello-world-cicd
+
         mvn deploy -DmuleDeploy \
          -Dmule.artifact=$artifactName \
          -Danypoint.username="$USERNAME" \
